# noetica-app

./: .env.example  .pylintrc  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
core/static/core/css/: base.css
core/templates/: base.html
core/templates/core/: home.html
core/templates/partials/: header.html  sidebar.html
