[tool.poetry]
name = "noetica-app"
version = "0.1.0"
description = "A personal assistant web application built with Django."
authors = ["Noetica App <noetica.app@meta.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
django-environ = "^0.12.0"
psycopg2 = "^2.9.11"
cloudinary = "^1.44.1"
django-cloudinary-storage = "^0.3.0"
pillow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
pylint = ">=3,<4"
pylint-django = ">=2.6,<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
